# speech-to-text

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
speech_to_text/: config.py
speech_to_text/adapters/: faster_whisper_transcriber.py  formatters.py  job_store.py
speech_to_text/application/: transcription_service.py
speech_to_text/domain/: models.py  ports.py
speech_to_text/web/: __main__.py  api.py
speech_to_text/web/static/: index.html
tests/: test_domain.py
